--- a/index.html
+++ b/index.html
@@ -325,10 +325,9 @@
         <a
           class="footer__link twitter-link"
           target="_blank"
-          href="https://twitter.com/jonasschmedtman"
-          >Jonas Schmedtmann</a
-        >. Use for learning or your portfolio. Don't use to teach. Don't claim
-        as your own product.
+          href="https://tusharkhatri20.github.io/portfolio/"
+          >Tushar Khatri</a
+        >. 
       </p>
     </footer>
 
